* (bluefox) Added object creation and enumerations reading
