# lib/api/controllers/object.js
@@ -64,6 +64,28 @@ module.exports = {
         });
     },
 
+    createObject: function (req, res) {
+        commonLib.checkPermissions(req._adapter, req._user, [{type: 'object', operation: 'write'}], async err => {
+            if (err) {
+                res.status(403).json({error: err});
+            } else {
+                const params = commonLib.parseUrl(req.url, req.swagger);
+                const body = req.body;
+                try {
+                    const obj = await req._adapter.getForeignObjectAsync(params.objectId, {user: req._user});
+                    if (!obj) {
+                        await req._adapter.setForeignObjectAsync(params.objectId, body, {user: req._user});
+                        res.status(200).json(body);
+                    } else {
+                        res.status(409).json({error: 'Object already exists', id: params.objectId});
+                    }
+                } catch (error) {
+                    res.status(500).json({error, objectId: params.objectId});
+                }
+            }
+        });
+    },
+
     deleteObject: function (req, res) {
         commonLib.checkPermissions(req._adapter, req._user, [{type: 'object', operation: 'write'}], async err => {
             if (err) {
